Sat Feb 27 11:27:26 2021  Trey Bruce  <jab3@korazin.net>

	* commands.c: Cleaning up some comments

Mon Jan 18 02:32:29 2021  Trey Bruce  <jab3@korazin.net>

	* simple_calc.c (left_associative): Made power (^) operator right-associative.

Sun Jan 17 02:13:16 2021  Trey Bruce  <jab3@korazin.net>

	* simple_calc.c (calculate): Added check for 0 denominator in modulo.

Sun Jan 17 02:11:32 2021  Trey Bruce  <jab3@korazin.net>

	* simple_calc.c: Remove error_stack. Unnecessary and unused.

Sat Jan 16 02:34:13 2021  Trey Bruce  <jab3@korazin.net>

	* simple_calc.c (main): Remove the global var_list variable.
	Didn't really need to do it that way. Not sure my
	static-in-the-loop method is great but.

Sat Jan 16 02:17:44 2021  Trey Bruce  <jab3@korazin.net>

	* simple_calc.c (assert_calc): Add variables to the test
	functions. Tests (e.g., "(a*h+z)/a") are passing.

Sat Jan 16 01:56:23 2021  Trey Bruce  <jab3@korazin.net>

	* simple_calc.c (parse_infix): Added ability to recognize
	variables and substitute the stored value when found. Variable
	list is a very simple hash table/array. Index is the variable
	itself, converted to a number.

	* commands.c: Added following function:
	int hash_var(char v):
	this will convert a variable into a number/index (right now it's a
	simple as obtaining the numeric code of the letter, where A=0.

	Reworked the other new prototypes to match the new variable_list
	data structure, which is a sort of hash table - that is, an array
	where the index is the variable.

	Variables working. Basically. Still needs more testing. And
	finding memory leaks.

Fri Jan 15 21:15:02 2021  Trey Bruce  <jab3@atdesk.com>

	* commands.c: Added the following functions:
	int validate_variable(const char * v):
	Make sure the entered variable is a single letter.

	int validate_value(const char * v):
	Make sure the value is a number.

	int lookup_var(char x, Variable **vars, stack_type *);
	Lookup function for the list of variables. Barely a prototype at